--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Global Styles */
 body {
     font-family: Arial, Verdana, sans-serif;
     background-color: #000000;
@@ -5,6 +6,7 @@ body {
     color: #FFFFFF;
     /* White text */
     margin: 20px 20px 0 20px;
+    /* 20px margin top and sides, none on the bottom */
 }
 
 /* h1 heading */
@@ -25,6 +27,7 @@ h2 {
 p {
     font-size: 24px;
     padding: 10px 0 0 10px;
+    /* Padding on top and left */
 }
 
 /* Image styles */
@@ -33,7 +36,7 @@ img {
     /* Set width only */
     display: block;
     margin: 0 auto;
-    /* Center images */
+    /* Center image */
     border: 10px dashed #FFFFFF;
     /* White dashed border */
 }
